[develop]
script_dir=$base/lib/bob_topic_tools
[install]
install_scripts=$base/lib/bob_topic_tools
[options.entry_points]
console_scripts =
    filter = bob_topic_tools.filter:main
    stream_filter = bob_topic_tools.stream_filter:main
    aggregator = bob_topic_tools.aggregator:main
    terminal = bob_topic_tools.terminal:main
